--- a/Python/django_forms/reviews/templates/reviews/review_detail.html
+++ b/Python/django_forms/reviews/templates/reviews/review_detail.html
@@ -6,4 +6,13 @@
     <h1>Review by {{ review.user_name }}</h1>
     <p>{{  review.rating }} out of 5.</p>
     <p>{{ review.review_text }}</p>
+    {% if is_favorite %}
+        <p>This is my favorite!</p>
+    {% else %}
+        <form method="POST" action="/reviews/favorite">
+            {% csrf_token %}
+            <input type="hidden" name="review_id" value="{{ review.id }}">
+            <button>Favorite</button>
+        </form>
+    {% endif %}
 {% endblock %}
