--- a/Python/django_blog/blog/templates/blog/includes/header.html
+++ b/Python/django_blog/blog/templates/blog/includes/header.html
@@ -1,8 +1,9 @@
 <header id="main-navigation">
     <h1>
-       <a href="{% url "home-page" %}">Home page</a>
+         <a href="{% url "home-page" %}">Home page</a>
     </h1>
     <nav>
-       <a href="{% url "posts-page" %}">All posts</a>
+         <a href="{% url "read-later" %}">Stored posts</a>
+         <a href="{% url "all-posts" %}">All posts</a>
     </nav>
 </header>
