--- a/Python/django_blog/blog/templates/blog/post-detail.html
+++ b/Python/django_blog/blog/templates/blog/post-detail.html
@@ -17,8 +17,21 @@
                 <span class="tag">{{ tag }}</span>
             {% endfor %}
         </div>
+        <div id="read-later">
+            <form action="{% url "read-later" %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" value="{{ post.id }}" name="post_id">
+                <button>
+                    {% if saved_for_later %}
+                        Remove from "Read Later"
+                    {% else %}
+                        Read Later
+                    {% endif %}
+                </button>
+            </form>
+        </div>
         <article>
-            <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}">
+            <img src="{{ post.image.url }}" alt="{{ post.title }}">
             <address>By <a href="mailto:{{ post.author.email }}">{{ post.author }}</a></address>
             <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div>
         </article>
@@ -27,4 +40,30 @@
     <main>
         <p>{{ post.content|linebreaks }}</p>
     </main>
+
+    <section id="comments">
+        <ul>
+            {% for comment in comments %}
+                <li>
+                    <h2>{{ comment.user_name }}</h2>
+                    <p>{{ comment.text|linebreaks }}</p>
+                </li>
+            {% endfor %}
+        </ul>
+    </section>
+
+    <section id="comment-form">
+        <h2>Your comment</h2>
+        <form action="{% url "post-detail" post.id %}" method="POST">
+            {% csrf_token %}
+            {% for form_field in comment_form %}
+                <div class="form-control">
+                    {{ form_field.label_tag }}
+                    {{ form_field }}
+                    {{ form_field.errors }}
+                </div>
+            {% endfor %}
+            <button>Save comment</button>
+        </form>
+    </section>
 {% endblock  %}
